--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#SupportHero{
+  background-color: rgb(56, 126, 209);
+  color: white;
+}
+
+#SupportHero a{
+  color: white;
+  margin-right: 20px;
+}
+
+#supportWrapper{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 100px;
+}
+
+#SupportHero input{
+padding: 15px 20px;
+width: 100%;
+font-size: 17px;
+border-radius: 5px;
+}
+
+#SupportHero ol li{
+  margin-top: 10px;
+}
